# LeA3c-est

./: CMakeLists.txt  imgui.ini
assets/models/: environment.mtl  environment2.mtl  kaonashi.mtl  pineapple2.mtl
src/: Boid.cpp  Boid.hpp  Character.cpp  Character.hpp  Light.hpp  Model.cpp  Model.hpp  Program.hpp  character.hpp  main.cpp
src-common/glimac/: FreeflyCamera.cpp  FreeflyCamera.hpp  TrackballCamera.cpp  TrackballCamera.hpp
src/shaders/: 3D.vs.glsl  light.fs.glsl  pointLight.fs.glsl
